[tool.poetry]
name = "middleman-fastapi"
version = "0.1.0"
description = ""
authors = ["Ivan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
